--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,12 @@
     <string name="intitule_txt">Intitulé</string>
     <string name="promotion_txt">Promotion</string>
     <string name="classe_form_txt">Classeform</string>
-    <string name="matiere_form_txt">Nouvelle une Matière</string>
+    <string name="matiere_form_txt">Matièreform</string>
     <string name="eleve_form_txt">Elèveform</string>
     <string name="add_txt">Ajouter</string>
     <string name="classe_tag">classe</string>
     <string name="matiere_tag">matiere</string>
     <string name="eleve_tag">éleve</string>
     <string name="titre_list">Liste:</string>
+    <string name="matiere_detail_txt">Détail Matière</string>
 </resources>
