--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="matiere_tag">matiere</string>
     <string name="eleve_tag">éleve</string>
     <string name="titre_list">Liste:</string>
+    <string name="matiere_detail_txt">Détail Matière</string>
 </resources>
