Ajout classe_detail, Form et modif String

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="eleve_tag">éleve</string>
     <string name="titre_list">Liste:</string>
     <string name="matiere_detail_txt">Détail Matière</string>
+    <string name="classe_detail_txt">Détail Classe</string>
 </resources>
