correction bug id debut

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="titre_list">Liste:</string>
     <string name="matiere_detail_txt">Détail Matière</string>
     <string name="classe_detail_txt">Détail Classe</string>
+    <string name="eleve_classes_title_txt">Classes</string>
+    <string name="supprimer_txt">Supprimer</string>
 </resources>
