correction bug id ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="classe_txt">Classe</string>
     <string name="eleves_txt">Elèves</string>
     <string name="matieres_txt">Matières</string>
+    <string name="logo_txt">logo Cnam</string>
 </resources>
